--- a/pe.html
+++ b/pe.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>How to Donate to Dandelion's Oasis</h1>
-	<img src="image/oasis.jpg" alt="photo editing assignment">
+	<img src="image/Oasis.jpg" alt="photo editing assignment">
 	<br>
 	<p>While many civilizations require funds for goods and services, Dandelion has thrived off of the land for milenia. Therefore, those who wish to donate are instead encouraged to offer tributes to The Oasis</p>
 
